--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JLbr2022.github.io</title>
-  </head>
-  <body>
-    <h1>Bien venidos a mi web</h1>
-    <h2>Estaré modificando esta página durante mi aprendizaje de:</h2>
-    <li>HTML</li>
-    <li>CCS</li>
-    <li>JS</li>
-   </body>
-</html>
+
+Bien venidos a mi web
+Estaré modificando esta página durante mi aprendizaje sobre:
+- HTML
+- CCS
+- JS
